@@ -41,6 +41,8 @@
      authentication.  This allows configurations such as permitting password
      authentication from the local net only while requiring pubkey from
      offsite.  ok djm@, man page bits ok jmc@
+ - (dtucker) [contrib/findssl.sh] Add "which" as a shell function since some
+   platforms don't have it.  Patch from dleonard at vintela.com.
 
 20070128
  - (djm) [channels.c serverloop.c] Fix so-called "hang on exit" (bz #52)
@@ -2736,4 +2738,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4617 2007/02/19 11:25:37 dtucker Exp $
+$Id: ChangeLog,v 1.4618 2007/02/19 11:44:25 dtucker Exp $
